# datahub-local

./: .gitignore  404.html  CNAME  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.devcontainer/: devcontainer.json  init.sh
.github/workflows/: pages.yml
cluster_setup/bootstrapping/: index.html
cluster_setup/hardware/: index.html
docs/: index.md  installation.md
docs/assets/: diagrams.drawio
docs/blog/posts/: 1_embracing_the_challenge.md  why_this.md
docs/cluster_setup/: bootstrapping.md  hardware.md  k8s_bootstrapping.md
docs/services/: core.md
services/core/: index.html
